fixed navbar toggle not showing vertically

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -11,6 +11,10 @@
   color: #fb6107;
 }
 
+.Toggler {
+  display: contents;
+}
+
 * {
   box-sizing: border-box;
 }
